# ai_assistant

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py  models.py  schemas.py  services.py
app/routers/: assistants.py  chats.py
tests/: conftest.py  test_chat_flow.py
